# Simanta

./: CMakeLists.txt  LICENSE  README.md  setup_dist.iss
.github/workflows/: build-windows.yml
common/: CMakeLists.txt  lang.h  protocol.cpp  protocol.h
student/: CMakeLists.txt  main.cpp  screen_capturer.cpp  screen_capturer.h  student_agent.cpp  student_agent.h
teacher/: CMakeLists.txt  app.rc  connection_manager.cpp  connection_manager.h  help_requests_code.txt  main.cpp  sidebar_widget.cpp  sidebar_widget.h  student_grid.cpp  student_grid.h  student_tile.cpp  student_tile.h  styles.h  toolbar_widget.cpp  toolbar_widget.h  tutor_window.cpp  tutor_window.h
teacher/resources/: resources.qrc
