cmake_minimum_required(VERSION 3.16)
project(SiManta VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# Find Qt6
find_package(Qt6 REQUIRED COMPONENTS Core Widgets Network Gui)

# Windows-specific compile options
if(MSVC)
    add_compile_options(/W4 /utf-8)
    add_compile_definitions(WIN32_LEAN_AND_MEAN NOMINMAX)
else()
    add_compile_options(-Wall -Wextra)
endif()

# Subdirectories
add_subdirectory(common)
add_subdirectory(student)
add_subdirectory(teacher)
